--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 Mais texto</p>
 <p>Segundo parágrafo do meu site.
 <b>Texto teste em negrito</b>
-e também vamos escrever <i>em itélico</i></p>
+e também vamos escrever <i>em itálico</i></p>
+<p><b>Mais um parágrafo todo em negrito</b></p>
 <p>Fim da apresentação</p>
   </body>
 </html>
