reunião 25/07 inicio CSS

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Arquivo teste</title>
+    <link rel="stylesheet" href="style.css">
   </head>
+
+
   <body>
 <h1>TÍTULO DO MEU SITE</h1>
 <h3>SUBTÍTULO DO MEU SITE</h3>
@@ -11,8 +14,7 @@
 Mais texto</p>
 <p>Segundo parágrafo do meu site.
 <b>Texto teste em negrito</b>
-e também vamos escrever <i>em itálico</i></p>
-<p><b>Mais um parágrafo todo em negrito</b></p>
+e também vamos escrever <i>em itélico</i></p>
 <p>Fim da apresentação</p>
   </body>
 </html>
