--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 
 
   <body>
-<h1>TÍTULO DO MEU SITE</h1>
-<h3>SUBTÍTULO DO MEU SITE</h3>
+
+<img ID="cabeçalho" src="image.png">
+<h1>BEM-VINDOS À NOSSA TURMA DO FORMAÇÃO EM AÇÃO</h1>
+
+<img ID="turma" src="homepage-web.jpg">
+<h3>MINHA NOVA HOMEPAGE</h3>
 <p>Este é o primeiro parágrafo do meu site.
-Mais texto</p>
+
+<span>Mais texto</span>
+
+</p>
 <p>Segundo parágrafo do meu site.
 <b>Texto teste em negrito</b>
 e também vamos escrever <i>em itélico</i></p>
